# machine_learning_for_grasping

./: .gitignore  .swp  CMakeLists.txt  README.md  package.xml
MLROSNODES/: GBC.py  Main.py  Models.py  Processing.py
MLROSNODES/CSV/: BanPreparedData.csv
MLROSNODES/images/: ModelsAccuracy1  bnb  dtc  gbc  gnb  knc  lda  lrc  lsv  rfc
PyQt5/: index.py
Synopsis/: Synopsis Format - New (15-04-2014) (1).docx
scripts/: DecisionTreeClassifier2  GradientBoostingClassifier2  RandomForestClassifier2  grasp_manager_console  grasp_manager_node  machine_learning_client  machine_learning_server  machine_learning_training.py  unseen.csv
scripts/Models/: DecisionTreeClassifier  GradientBoostingClassifier  RandomForestClassifier  actionEncoder  labelEncoder  objectEncoder
scripts/graspit/: grasp_manager_node
scripts/machine_learing/: machine_learning_client  machine_learning_server
srv/: grasp_feasibility_evaluation.srv
