<?xml version="1.0"?>
<package>

  <name>machine_learning</name>
  <version>0.9.0</version>
  <description>
    This package applies the machine learning techniques to a set of graasping poses and returns the best grasp.
  </description>
  <maintainer email="muhayyuddin.gillani@upc.edu">Muhayy Ud Din</maintainer>
  <license>BSD</license>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python-matplotlib</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-pandas</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-pandas</run_depend>
  <run_depend>python-sklearn</run_depend>

</package>
